--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@ng-select/ng-select": "^11.0.0",
     "@ngx-translate/core": "^15.0.0",
